added services page with design

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -20,7 +20,7 @@
 
 <header class="header-container">
   <nav class="nav">
-  <a class="nav-bar-item" href="#">Services</a>
+  <a class="nav-bar-item" href="services.html">Services</a>
   <a class="nav-bar-item" href="#">Product</a>
   <a class="nav-bar-item" href="#">Vision</a>
   <a class="nav-bar-item" href="#">Features</a>
