--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,56 +1,83 @@
-<!-- copy and paste your index.html page structure in here, markup the content provided after that -->
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
 
-Services
-Product
-Vision
-Features
-About
-Contact
+  <title>Great Idea!</title>
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
+
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
+<body>
+<div class="main-container">
+
+<header class="header-container">
+  <nav class="nav">
+  <a class="nav-bar-item" href="services.html">Services</a>
+  <a class="nav-bar-item" href="#">Product</a>
+  <a class="nav-bar-item" href="#">Vision</a>
+  <a class="nav-bar-item" href="#">Features</a>
+  <a class="nav-bar-item" href="#">About</a>
+  <a class="nav-bar-item" href="#">Contact</a>
+  <a class="logo" href="#"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
+</nav>
+
+</header>
+
 
 
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 
-Services
+<section class="services-description">
+<h2 class="services-title">Services</h2>
+<p class="description-content">
+Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+</section>
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+<hr class="divider">
 
+<section class="content">
 
-Digital Design
-
+<div class="services-block">
+<h3 class="block-title">Digital Design</h3>
+<p class="block-text">
 Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a class="block-button" href="#">Learn More</a>
+</div>
 
-
-
-UX / UI
-
+<div class="services-block">
+<h3 class="block-title">UX / UI</h3>
+<p class="block-text">
 Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a class="block-button" href="#">Learn More</a>
+</div>
 
-
-
-Digital Marketing
-
+<div class="services-block">
+<h3 class="block-title">Digital Marketing</h3>
+<p class="block-text">
 Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a class="block-button" href="#">Learn More</a>
+</div>
 
 
-
-Web Development
-
+<div class="services-block">
+<h3 class="block-title">Web Development</h3>
+<p class="block-text">
 Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a class="block-button" href="#">Learn More</a>
 
 
 
@@ -70,6 +97,7 @@ eleifend. Mauris euismod facilisis iaculis.
 
 Learn More
 
+</section>
 
 Some Facts About Our Services
 
@@ -85,3 +113,7 @@ Great thing
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
 
 Copyright Great Idea! 2018
+
+</div>
+</body>
+</html>
