--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -24,7 +24,7 @@
   <a class="nav-bar-item" href="#">Features</a>
   <a class="nav-bar-item" href="#">About</a>
   <a class="nav-bar-item" href="#">Contact</a>
-  <a class="logo" href="#"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
+  <a class="logo" href="index.html"><img src="img/logo.png" alt="Great Idea! Company logo."></a>
 </nav>
 
 </header>
@@ -78,41 +78,53 @@ Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nun
 eleifend. Mauris euismod facilisis iaculis.</p>
 
 <a class="block-button" href="#">Learn More</a>
+</div>
 
-
-
-iOS Development
-
+<div class="services-block">
+<h3 class="block-title">iOS Development</h3>
+<p class="block-text">
 Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a class="block-button" href="#">Learn More</a>
+</div>
 
-
-
-Android Development
-
+<div class="services-block">
+<h3 class="block-title">Android Development</h3>
+<p class="block-text">
 Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+<a class="block-button" href="#">Learn More</a>
+</div>
 
 </section>
 
-Some Facts About Our Services
+<hr class="divider">
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+<section class="extra-facts">
+	<div class="extra-facts-text">
+<h2 >Some Facts About Our Services</h2>
 
+<p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+eleifend. Mauris euismod facilisis iaculis.</p>
 
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
+<ul class="extra-facts-list">
+<li>Awesome thing</li>
+<li>Amazing thing</li>
+<li>Cool thing</li>
+<li>Great thing</li>
+</ul>
+</div>
 
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
 
-Copyright Great Idea! 2018
+</section>
+
+<footer>
+<p>Copyright Great Idea! 2018</p>
+
+</footer>
 
 </div>
 </body>
