centered footer, cleaned up code a bit after peer review

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -121,7 +121,7 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 
 </section>
 
-<footer>
+<footer class="footer-services">
 <p>Copyright Great Idea! 2018</p>
 
 </footer>
